# neat

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  README.md  ROADMAP.md
.agent/workflows/: coding-rules.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: book.toml  mkdocs.yml
docs/docs/: changelog.md  index.md
docs/docs/commands/: clean.md  completions.md  config.md  duplicates.md  history.md  organize.md  profile.md  quick.md  similar.md  stats.md  tui.md  undo.md  watch.md
docs/docs/examples/: music.md  photos.md  workflows.md
docs/docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/docs/reference/: filters.md  mime-types.md  size-date.md
docs/site/: 404.html  index.html  sitemap.xml
docs/site/commands/clean/: index.html
docs/site/commands/completions/: index.html
docs/site/commands/config/: index.html
docs/site/commands/duplicates/: index.html
docs/site/commands/history/: index.html
docs/site/commands/organize/: index.html
docs/site/commands/profile/: index.html
docs/site/commands/quick/: index.html
docs/site/commands/similar/: index.html
docs/site/commands/stats/: index.html
docs/site/commands/tui/: index.html
docs/site/commands/undo/: index.html
docs/site/commands/watch/: index.html
docs/site/examples/music/: index.html
docs/site/examples/photos/: index.html
docs/site/examples/workflows/: index.html
docs/site/getting-started/configuration/: index.html
docs/site/getting-started/installation/: index.html
docs/site/getting-started/quickstart/: index.html
docs/site/reference/filters/: index.html
docs/site/reference/mime-types/: index.html
docs/site/reference/size-date/: index.html
docs/site/search/: search_index.json
docs/src/: SUMMARY.md  installation.md  introduction.md  quickstart.md
docs/src/commands/: clean.md  config.md  duplicates.md  organize.md  similar.md  stats.md  tui.md  undo.md  watch.md
docs/src/reference/: configuration.md  filters.md
homebrew/: neat.rb  neatcli.rb
scripts/: update-homebrew.sh
src/: classifier.rs  cleaner.rs  cli.rs  config.rs  duplicates.rs  error.rs  export.rs  logger.rs  main.rs  metadata.rs  organizer.rs  scanner.rs  tui.rs  watcher.rs
src/commands/: clean.rs  config.rs  duplicates.rs  history.rs  mod.rs  organize.rs  profile.rs  quick.rs  similar.rs  stats.rs  undo.rs  watch.rs
src/core/: classifier.rs  cleaner.rs  content.rs  duplicates.rs  filters.rs  mod.rs  organizer.rs  scanner.rs  template.rs
src/utils/: hooks.rs  logger.rs  metadata.rs  mod.rs
tests/: cli_tests.rs
