[package]
name = "neat"
version = "0.1.0"
edition = "2021"
description = "A smart CLI tool to organize and clean up messy directories"
license = "MIT"
keywords = ["cli", "file-organizer", "cleanup", "utility"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[[bin]]
name = "neat"
path = "src/main.rs"
