[package]
name = "neatcli"
version = "0.2.0"
edition = "2021"
description = "A smart CLI tool to organize and clean up messy directories"
license = "MIT"
keywords = ["cli", "file-organizer", "cleanup", "utility"]
categories = ["command-line-utilities", "filesystem"]
repository = "https://github.com/patchybean/neatcli"
homepage = "https://github.com/patchybean/neatcli"
readme = "README.md"
authors = ["Patchy Bean"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
walkdir = "2.4"
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
toml = "0.8"
glob = "0.3"
notify = "7.0"
notify-debouncer-mini = "0.5"
ratatui = "0.29"
crossterm = "0.28"
trash = "5.2"
kamadak-exif = "0.5"
lofty = "0.21"
image = "0.25"
image_hasher = "2.0"
rayon = "1.10"
mime_guess = "2.0"
regex = "1.10"

[[bin]]
name = "neatcli"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.23"
assert_cmd = "2.0"
predicates = "3.0"
